# forex-cfd-pipeline

./: .coverage  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  QA-RESULTS.md  README.md  README_BOOTSTRAP.md  README_RUNBOOK.md  RELEASE_NOTES_v0.2.0-alpha-factory-core.md  RELEASE_NOTES_v2.2.1-alpha-factory-core.md  ROADMAP-1.1.md  _mkdocs_ok.csv  _mkdocs_ok.duckdb  best_theme.csv  cli_best.csv  cli_smoke.duckdb  cli_summary_dark.html  conftest.py  dev-requirements.in  dev-requirements.txt  hello.py  manifest-sha256.txt  manifest.yaml  mkdocs.yml  ok.duckdb  policy.yaml  pyproject.toml  pytest.ini  r.duckdb  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  run_smoke_test.py  summary_theme_dark.html  summary_v028.html  (+4 more)
.ci/: kick-ci.txt  kick-pr.txt
.data/: alpha_registry.db
.githooks/: pre-commit  pre-commit.cmd  pre-commit.ps1  pre-push  pre-push.ps1
.github/: ci-requirements.txt  constraints-ci.txt  kick_v7.txt  kick_v8.txt
.meta/: nf-ping.txt
_debug/: diag_rank.py
ai_lab/: audit_report.md  drift_dashboard.py  handoff_latest.md  indexer.py  live_switch.json  lock.json  plan.yaml  research_scheduler.py  serve_agent.py  session_manifest.csv  state.json  state.prev
alpha_factory/: __ci_nudge.py  __init__.py  alpha_registry.py  alpha_registry_ext_overrides_024.py  feature_store.py  meta_allocator.py  registry_cli.py  registry_tooling.py  registry_tooling_v027.py  registry_tooling_v028.py
artifacts/: drift_dashboard.html  drift_summary.csv  equity.csv  features-00000001.csv  pnl.csv  summary.json
config/: baseline.yaml  contracts.bak  contracts.csv  example.yaml  meta_allocator.yaml  production.yaml  production.yaml.bak_20251001_221914
configs/: _demo_metrics.json  bridge_mt5.yaml  meta_allocator.json
data/: DAILY_20250929_equity.csv  DAILY_20250929_positions.csv  DAILY_20250929_trades.csv  DAILY_20250930_equity.csv  DAILY_LIVE_positions.csv  DAILY_PREVIEW_attrib_sleeve.csv  E2E_FULL_equity.csv  E2E_FULL_trades.csv  E2E_SMOKE2_positions.csv  E2E_SMOKE_equity.csv  E2E_SMOKE_positions.csv  E2E_SMOKE_trades.csv  E2E_equity.csv  E2E_trades.csv  EURUSD.parquet  GBPUSD.parquet  IS_candidate_equity.csv  IS_candidate_trades.csv  OOS_candidate_equity.csv  OOS_candidate_trades.csv  POST_LIVE_trades.csv  TESTPOS_equity.csv  TESTPOS_positions.csv  TESTPOS_trades.csv  TEST_DAILY_equity.csv  USDJPY.parquet  XAUUSD.parquet  costs_per_symbol.csv  fold_01_BEST_equity.csv  fold_01_BEST_positions.csv  fold_01_BEST_trades.csv  fold_02_BEST_equity.csv  fold_02_BEST_positions.csv  fold_02_BEST_trades.csv  pnl_demo_attrib_sleeve.csv  pnl_demo_equity.csv  pnl_demo_trades.csv  registry_v025.duckdb  registry_v026.duckdb  registry_v027.duckdb  (+42 more)
docs/: CI_META.yml.md  CLI.md  DAILY_OPERATIONS.md  DEV_GUIDE.md  HOOKS_OVERVIEW.md  META_ALLOCATOR.md  RISK_GOVERNOR.md  (+8 more)
(+822 files in other folders)
